tests/NormalTests/paczka2/big_fuzzy/35360503.err
Error in line 2: GOOZsT S628 2,3
Error in line 4: S628 S683 93,5
Error in line 22: Z60 S830 71,7
Error in line 31: sApegIvpfv S275 58,04
Error in line 20: 4n3O1vAQYp S683 98,3
Error in line 32: pqR S275 36,1
Error in line 40: oHJbu S830 88,3
Error in line 54: 4n3O1vAQYp S683 36,1
Error in line 57: GOOZsT S628 75,7
Error in line 70: oHJbu S683 49,8
Error in line 91: 4n3O1vAQYp S275 15,2
Error in line 90: pqR S830 20,4
Error in line 92: 4n3O1vAQYp S830 21,3
Error in line 94: Z60 S628 1,8
Error in line 98: oHJbu S683 11,9
Error in line 99: 4n3O1vAQYp S683 67,0
Error in line 112: S628 S628 61,0
Error in line 116: 4n3O1vAQYp S830 263,6
Error in line 97: GOOZsT S628 48,3
Error in line 128: GOOZsT S275 40,8
Error in line 132: oHJbu S628 90,9
Error in line 102: Z60 S683 72,1
Error in line 143: oHJbu S683 1s3,2
Error in line 147: Z60 S683 42,0
Error in line 134: S628 S628 44,2
Error in line 158: S628 S683 86,8
Error in line 156: oHJbu S683 128,7
Error in line 154: Z60 S830 83,9
Error in line 163: Z60 S275 95,5
Error in line 175: pqR S275 72,1
Error in line 204: 4n3O1vAQYp S628 57,8
Error in line 211: pqR S830 49,0
Error in line 198: Z60 S830 328,3
Error in line 213: 4n3O1vAQYp S683 14,0
Error in line 215: Z60 S275 47,0
Error in line 218: 4n3O1vAQYp S628 91,8
Error in line 203: sApegIvpfv S683 134,0
